<resources>
    <string name="app_name">Project</string>
    <string name="firstAsk">23</string>
    <string name="secondAsk">140</string>
    <string name="thirdAsk">2345</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>


    <string name="play">ИГРАТЬ</string>
    <string name="irkipedia">ИРКИПЕДИЯ</string>


    <string name="button1">История</string>
    <string name="button2">Известный люди</string>
    <string name="button3">Памятники и символы</string>


</resources>