<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/popart8">


    <Button
        android:id="@+id/levelOne"
        android:layout_width="150px"
        android:layout_height="150px"
        android:layout_marginLeft="120px"
        android:layout_marginTop="500px"
        android:backgroundTint="@color/green"
        android:text="@string/one"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50px"

        android:onClick="levelFirstBtn"


        tools:ignore="OnClick" />

    <Button
        android:id="@+id/levelTwo"
        android:layout_width="150px"
        android:layout_height="150px"
        android:layout_marginLeft="73dp"
        android:layout_marginTop="500px"
        android:layout_toRightOf="@+id/levelOne"
        android:backgroundTint="@color/green"
        android:text="@string/two"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50px"

        />

    <Button
        android:layout_width="150px"
        android:layout_height="150px"
        android:layout_marginLeft="77dp"
        android:layout_marginTop="500px"
        android:layout_toRightOf="@+id/levelTwo"
        android:backgroundTint="@color/green"
        android:text="@string/three"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50px"

        />


</RelativeLayout>